fix text align

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 body {
     background-color: #f7f4eb;
     font-family: 'Noto Sans Chorasmian', sans-serif;
+    text-align: center;
     
 }
 
 
 #display {
-    text-align: center;
+    font-weight: bold;
 }
 
 #container {
@@ -18,7 +19,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    gap: 1.5rem;
     margin-bottom: 0.5rem;
 }
 
